[package]
name = "rsrok"
version = "0.1.0"
authors = ["sxend <arimitsu.k+github@gmail.com>"]

[dependencies]
clap = "2.26.2"
iron = "0.5.1"
router = "0.5.1"
time = "0.1.38"
serde = "1.0.15"
serde_json = "1.0.3"
serde_derive = "1.0.15"
futures = "0.1.16"
uuid = { version = "0.5.1", features = ["v4"] }

[[bin]]
name = "rsrokd"
path = "src/rsrokd.rs"

[[bin]]
name = "rsrok"
path = "src/rsrok.rs"